Fixed the issue with Call Logs dashboard. Version change 1.0.1.

--- a/default/data/ui/views/3cx_call_reports.xml
+++ b/default/data/ui/views/3cx_call_reports.xml
@@ -101,6 +101,8 @@
       <prefix>(</prefix>
       <suffix>)</suffix>
       <delimiter> OR </delimiter>
+      <valuePrefix>(</valuePrefix>
+      <valueSuffix>)</valueSuffix>
     </input>
   </fieldset>
   <row>
