--- a/default/data/ui/views/3cx_queue_overview.xml
+++ b/default/data/ui/views/3cx_queue_overview.xml
@@ -73,7 +73,7 @@
         <search>
           <query>`default_index` sourcetype="3cx:queuecalls_view" $hosts2$ $queues1$ 
 | dedup idcallcent_queuecalls
-| where !isnull(q_num) AND reason_noanswerdesc="" AND reason_failcode=0
+| where isnotnull(q_num) AND reason_noanswerdesc="" AND reason_failcode=0
 | stats count</query>
           <earliest>$time_overview.earliest$</earliest>
           <latest>$time_overview.latest$</latest>
@@ -86,7 +86,7 @@
         <search>
           <query>`default_index` sourcetype="3cx:queuecalls_view" $hosts2$ $queues1$ 
 | dedup idcallcent_queuecalls
-| where !isnull(q_num) AND reason_noanswerdesc!="" 
+| where isnotnull(q_num) AND reason_noanswerdesc!="" 
 | stats count</query>
           <earliest>$time_overview.earliest$</earliest>
           <latest>$time_overview.latest$</latest>
@@ -99,7 +99,7 @@
         <search>
           <query>`default_index` sourcetype="3cx:queuecalls_view" $hosts2$ $queues1$ 
 | dedup idcallcent_queuecalls
-| where !isnull(q_num) AND reason_noanswerdesc="" AND reason_failcode != 0
+| where isnotnull(q_num) AND reason_noanswerdesc="" AND reason_failcode != 0
 | stats count</query>
           <earliest>$time_overview.earliest$</earliest>
           <latest>$time_overview.latest$</latest>
@@ -117,8 +117,8 @@
         <search>
           <query>`default_index` sourcetype="3cx:queuecalls_view" $hosts2$ $queues1$ 
 | dedup idcallcent_queuecalls
-| timechart span=1d count(idcallcent_queuecalls) BY q_name
-| rename q_name as Queue, count(idcallcent_queuecalls) as "Total Calls"</query>
+| timechart span=1d count BY q_name
+| rename q_name as Queue, count as "Total Calls"</query>
           <earliest>$time_overview.earliest$</earliest>
           <latest>$time_overview.latest$</latest>
         </search>
@@ -216,7 +216,7 @@ sum(SlaP) as SlaPc by Queue
           <query>`default_index` sourcetype="3cx:queuecalls_view" $hosts2$ $queues1$ 
 | dedup idcallcent_queuecalls
 | timechart span=1d avg($savgs$) BY q_name
-| rename q_name as Queue, count(idcallcent_queuecalls) as "Total Calls"</query>
+| rename q_name as Queue</query>
           <earliest>$time_overview.earliest$</earliest>
           <latest>$time_overview.latest$</latest>
         </search>
