--- a/default/data/ui/views/3cx_overview.xml
+++ b/default/data/ui/views/3cx_overview.xml
@@ -57,7 +57,7 @@
       </single>
       <single>
         <search>
-          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ $callDir$ 
+          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ ($callDir$) 
 | dedup id 
 | stats count</query>
           <earliest>$tOverview.earliest$</earliest>
@@ -69,7 +69,7 @@
       </single>
       <single>
         <search>
-          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ $callDir$ | where is_answered="t" | dedup id | stats count</query>
+          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ ($callDir$) | where is_answered="t" | dedup id | stats count</query>
           <earliest>$tOverview.earliest$</earliest>
           <latest>$tOverview.latest$</latest>
         </search>
@@ -79,7 +79,7 @@
       </single>
       <single>
         <search>
-          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ $callDir$ | where is_answered="f" | dedup id | stats count</query>
+          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ ($callDir$) | where is_answered="f" | dedup id | stats count</query>
           <earliest>$tOverview.earliest$</earliest>
           <latest>$tOverview.latest$</latest>
         </search>
@@ -90,7 +90,7 @@
       <chart>
         <title>Daily Call Activity</title>
         <search>
-          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ $callDir$
+          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ ($callDir$)
 | dedup id 
 | eval status = if(is_answered="t","Answered","Unanswered")
 | timechart count by status span=1d</query>
@@ -115,7 +115,7 @@
       <chart>
         <title>Hourly Heat Map</title>
         <search>
-          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ $callDir$
+          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ ($callDir$)
 | dedup id
 | timechart span=1h count
 | eval Hour=strftime(_time,"%H") 
@@ -137,7 +137,7 @@
       <chart>
         <title>Call Time Distribution</title>
         <search>
-          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ $callDir$
+          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ ($callDir$)
 | dedup id
 | eval hourOfCall=strftime(_time,"%H")
 | eval timeOfDay = case(hourOfCall&lt;6, "Early Morning", hourOfCall&gt;5 AND hourOfCall&lt;12, "Morning", hourOfCall&gt;11 AND hourOfCall&lt;17, "Afternoon", hourOfCall&gt;16, "Evening")
@@ -196,7 +196,7 @@
       <title>Most Recent Calls</title>
       <table id="highlight">
         <search>
-          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ $callDir$
+          <query>`default_index` sourcetype="3cx:calls_view" $hosts1$ ($callDir$)
 | dedup id
 | eval ringing_dur = if(isnull(ringing_dur) OR ringing_dur = "00:00:00.000000", "00:00:00.000000",strftime(strptime(ringing_dur, "%H:%M:%S.%3N"), "%H:%M:%S.%3N"))
 | eval talking_dur = if(isnull(talking_dur) OR talking_dur = "00:00:00.000000", "00:00:00.000000",strftime(strptime(talking_dur, "%H:%M:%S.%3N"), "%H:%M:%S.%3N"))
