--- a/default/data/ui/views/3cx_queue_overview.xml
+++ b/default/data/ui/views/3cx_queue_overview.xml
@@ -30,12 +30,12 @@
       <default>*</default>
       <prefix>(</prefix>
       <suffix>)</suffix>
-      <valuePrefix>q_name="</valuePrefix>
+      <valuePrefix>q_num="</valuePrefix>
       <delimiter> OR </delimiter>
       <fieldForLabel>fqname</fieldForLabel>
-      <fieldForValue>q_name</fieldForValue>
+      <fieldForValue>q_num</fieldForValue>
       <search>
-        <query>`default_index` sourcetype="3cx:queuecalls_view" $hosts2$ | eval fqname = q_name+" ("+q_num+")" | dedup q_name | table q_name,fqname | sort + q_name</query>
+        <query>`default_index` sourcetype="3cx:queuecalls_view" $hosts2$ | eval fqname = q_name+" ("+q_num+")" | dedup q_num | table q_num,fqname | sort + q_name</query>
         <earliest>0</earliest>
         <latest></latest>
       </search>
@@ -131,7 +131,21 @@
       </chart>
     </panel>
     <panel>
-      <title>Daily Call Expectancy - Heat Map</title>
+      <title>Daily Call Expectancy vs Agent Logins</title>
+      <input type="dropdown" token="tkn_aggregation">
+        <label>Aggregation for Heat Map</label>
+        <choice value="sum">Summation</choice>
+        <choice value="avg">Average</choice>
+        <default>sum</default>
+      </input>
+      <input type="dropdown" token="tkn_agent_login_less_than">
+        <label>Exclude Agent Login</label>
+        <choice value="0">Do not exclude any logins</choice>
+        <choice value="300">Less than 5 minutes</choice>
+        <choice value="1800">Less than 30 minutes</choice>
+        <choice value="3600">Less than 1 hour</choice>
+        <default>1800</default>
+      </input>
       <chart>
         <title>Hourly Heat Map</title>
         <search>
@@ -139,14 +153,24 @@
 | dedup idcallcent_queuecalls 
 | timechart span=1h count
 | eval Hour=strftime(_time,"%H") 
-| stats sum(count) as Calls by Hour</query>
+| stats $tkn_aggregation$(count) as Calls by Hour
+| append [| search `default_index` sourcetype="3cx:agent_logins" $hosts2$ $queues1$
+| dedup ag_num, logintime
+| where secondsloggedin&gt;$tkn_agent_login_less_than$
+| eval starttime=strptime(logintime,"%Y-%m-%d %H:%M:%S%:::z"),endtime=strptime(logouttime,"%Y-%m-%d %H:%M:%S%:::z")
+| eval time = mvrange(starttime,endtime,"1h") | mvexpand time | eval _time = time
+| timechart span=1h count
+| eval Hour=strftime(_time,"%H") | stats $tkn_aggregation$(count) as Agents_LoggedIn by Hour]
+| stats first(*) as * by Hour
+| fillnull Agents_LoggedIn, Calls value=0</query>
           <earliest>$time_overview.earliest$</earliest>
           <latest>$time_overview.latest$</latest>
         </search>
-        <option name="charting.axisTitleY.text">Hour</option>
-        <option name="charting.chart">line</option>
+        <option name="charting.chart">column</option>
+        <option name="charting.chart.overlayFields">Agents_LoggedIn</option>
         <option name="charting.drilldown">none</option>
         <option name="refresh.display">progressbar</option>
+        <option name="charting.fieldColors">{"Calls":#4fa483, "Agents_LoggedIn": #006caa}</option>
       </chart>
     </panel>
   </row>
