--- a/default/data/ui/views/3cx_queue_overview.xml
+++ b/default/data/ui/views/3cx_queue_overview.xml
@@ -186,6 +186,36 @@
   </row>
   <row>
     <panel>
+      <title>Call Distribution for Agents</title>
+      <chart>
+        <search>
+          <query>`default_index` sourcetype="3cx:call_report" $hosts2$ 
+| eval call_dir = case((src_type=1 OR src_type=0), "Inbound", (dst_type=13 OR dst_type=1), "Outbound", 1==1, "Other")
+| eval call_start_time = strptime(call_start_time,"%Y-%m-%d %H:%M:%S")
+| eval dst_display_name=if(isnull(dst_display_name), dst_caller_number, dst_display_name)
+| stats count by call_id, call_start_time, seq_order, dst_dn, dst_caller_number, dst_display_name, has_queue, call_dir
+| fields - count | sort -call_id, + seq_order
+| eval q_num=if(has_queue=1, dst_dn, null())
+| eval agent=if(has_queue=0, dst_caller_number." - ".dst_display_name, null())
+| stats sum(has_queue) as has_queue, first(call_dir) as call_dir, values(q_num) as q_num, values(agent) as Agent by call_id, call_start_time
+| search $queues1$ Agent=* | where has_queue&gt;0
+| rename call_start_time as _time
+| mvexpand Agent
+| chart count(call_id) as count over Agent by call_dir</query>
+          <earliest>$time_overview.earliest$</earliest>
+          <latest>$time_overview.latest$</latest>
+        </search>
+        <option name="charting.axisTitleY.text">No. of Calls</option>
+        <option name="charting.chart">column</option>
+        <option name="charting.chart.stackMode">stacked</option>
+        <option name="charting.drilldown">none</option>
+        <option name="charting.fieldColors">{"Inbound":#4fa483, "Outbound":#ec9860, "Other": #cce34d}</option>
+        <option name="refresh.display">progressbar</option>
+      </chart>
+    </panel>
+  </row>
+  <row>
+    <panel>
       <title>Daily % Calls Answered by Queue</title>
       <input type="time" token="tframe1" searchWhenChanged="true">
         <label>Time Frame</label>
