--- a/default/data/ui/views/3cx_call_reports.xml
+++ b/default/data/ui/views/3cx_call_reports.xml
@@ -93,16 +93,16 @@
     </input>
     <input type="checkbox" token="calldire" searchWhenChanged="true">
       <label></label>
-      <choice value="src_type=1 OR src_type=0">Inbound Calls</choice>
-      <choice value="dst_type=13 OR dst_type=1">Outbound Calls</choice>
-      <choice value="src_type!=1 AND src_type!=0 AND dst_type!=13 AND dst_type!=1">Other</choice>
-      <default>src_type=1 OR src_type=0,dst_type=13 OR dst_type=1,src_type!=1 AND src_type!=0 AND dst_type!=13 AND dst_type!=1</default>
-      <initialValue>src_type=1 OR src_type=0,dst_type=13 OR dst_type=1,src_type!=1 AND src_type!=0 AND dst_type!=13 AND dst_type!=1</initialValue>
+      <choice value="Inbound">Inbound Calls</choice>
+      <choice value="Outbound">Outbound Calls</choice>
+      <choice value="Internal">Internal</choice>
+      <choice value="Other">Other</choice>
+      <default>Inbound,Outbound,Internal,Other</default>
       <prefix>(</prefix>
       <suffix>)</suffix>
-      <delimiter> OR </delimiter>
-      <valuePrefix>(</valuePrefix>
-      <valueSuffix>)</valueSuffix>
+      <delimiter>, </delimiter>
+      <valuePrefix>"</valuePrefix>
+      <valueSuffix>"</valueSuffix>
     </input>
   </fieldset>
   <row>
@@ -111,16 +111,18 @@
       <table id="callrep">
         <search>
           <query>`default_index` sourcetype="3cx:call_report" 
-$hosts4$ $iext$ $exnums$ ($pcallid$) $qcallopt$ ($calldire$)
+$hosts4$ $iext$ $exnums$ ($pcallid$) $qcallopt$ 
+| eval call_dir = case((src_type=0 AND (dst_type=1 OR dst_type=13)), "Outbound", src_type=1, "Inbound", (src_type=0 AND dst_type=0), "Internal")
 | eval call_start_time = strftime(strptime(call_start_time,"%Y-%m-%d %H:%M:%S"),"%m/%d/%Y %I:%M:%S %p%z")
 | eval recording_url = if(isnull(recording_url), "NOREC", recording_url) 
 | eval rec_url = replace(replace(replace(replace(replace(replace(replace(recording_url, "\)", "%2529"), "\(", "%2528"), " ", "%2520"), "\]", "%255D"), "\[", "%255B"), "%3A", "%25253A"), "\/", "%252F")
 | eval hst = lower(host)
 | eval rec_link = if(rec_url="NOREC",rec_url,"https://"+hst+":5001/#/download_record/"+rec_url)
-| stats count by call_id, call_start_time ,seq_order, start_time, end_time, src_caller_number, src_display_name, dst_caller_number, dst_display_name, action, rec_link
+| stats count by call_id, call_start_time ,seq_order, start_time, end_time, src_caller_number, src_display_name, dst_caller_number, dst_display_name, action, rec_link, call_dir
 | fields - count | sort -call_id, + seq_order
 | rename call_id as "Call ID", call_start_time as "Call Time", rec_link as Recording
-| stats list(seq_order) as Sequence, list(start_time) as "Start Time", list(end_time) as "End Time", list(src_caller_number) as "Source Number", list(src_display_name) as "Source Name", list(dst_caller_number) as "Dest. Number", list(dst_display_name) as "Dest. Name", list(action) as "Action" by "Call ID", "Call Time", Recording
+| stats first(call_dir) as call_dir, list(seq_order) as Sequence, list(start_time) as "Start Time", list(end_time) as "End Time", list(src_caller_number) as "Source Number", list(src_display_name) as "Source Name", list(dst_caller_number) as "Dest. Number", list(dst_display_name) as "Dest. Name", list(action) as "Action" by "Call ID", "Call Time", Recording
+| search call_dir IN $calldire$ | fields - call_dir
 | sort - "Call ID", + seq_order</query>
           <earliest>$tspan1.earliest$</earliest>
           <latest>$tspan1.latest$</latest>
